Fix Download Firefox button text on mobile screens

--- a/src/amo/components/Header/styles.scss
+++ b/src/amo/components/Header/styles.scss
@@ -106,6 +106,7 @@
 
 .Header-button {
   margin-bottom: 12px;
+  white-space: nowrap;
   vertical-align: top;
 }
 
